--- a/FreeRTOS_USB_Motor_Control.ioc
+++ b/FreeRTOS_USB_Motor_Control.ioc
@@ -1,8 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ServoTask,8,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=FREERTOS
@@ -17,17 +18,15 @@ Mcu.Name=STM32F427I(G-I)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PA14
 Mcu.Pin1=PA13
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PA12
 Mcu.Pin3=PA11
 Mcu.Pin4=PI0
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
-Mcu.Pin7=PH12
-Mcu.Pin8=PH11
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V2
-Mcu.PinsNb=12
+Mcu.Pin7=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F427IIHx
@@ -65,8 +64,6 @@ PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
-PH11.Signal=S_TIM5_CH2
-PH12.Signal=S_TIM5_CH3
 PI0.Signal=S_TIM5_CH4
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
@@ -96,7 +93,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -135,20 +132,12 @@ RCC.VCOSAIOutputFreq_Value=98000000
 RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
-SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
-SH.S_TIM5_CH2.ConfNb=1
-SH.S_TIM5_CH3.0=TIM5_CH3,PWM Generation3 CH3
-SH.S_TIM5_CH3.ConfNb=1
 SH.S_TIM5_CH4.0=TIM5_CH4,PWM Generation4 CH4
 SH.S_TIM5_CH4.ConfNb=1
-TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM5.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4
+TIM5.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation4 CH4
 TIM5.Period=19999
 TIM5.Prescaler=83
-TIM5.Pulse-PWM\ Generation2\ CH2=2000
-TIM5.Pulse-PWM\ Generation3\ CH3=2000
 TIM5.Pulse-PWM\ Generation4\ CH4=2000
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS,PID_CDC_FS
